fix: change size pop-up on mobile version on shelter page

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -482,13 +482,14 @@ footer a {
     display: flex;
     gap: 29px;
     border-radius: 9px;
+    overflow: hidden;
     background-color: #FAFAFA;
 }
 
 .pop_up__pet.opened img {
     width: 500px;
     height: 500px;
-    border-radius: 9px;
+    object-fit: cover;
 }
 
 .pop_up__item {
@@ -777,9 +778,9 @@ html.stop {
     }
 
     .pop_up__pet.opened img {
-        width: 55%;
+        width: 50%;
         height: auto;
-        margin: auto;
+        object-fit: cover;
     }
 
     .pop_up__pet.opened .pop_up__wrapper {
@@ -1203,6 +1204,7 @@ html.stop {
 
     .pop_up__pet.opened .pop_up__info {
         padding: 5%;
+        max-height: 390px;
     }
 
     .pop_up__pet {
@@ -1559,6 +1561,7 @@ html.stop {
 
     .pop_up__pet.opened .pop_up__info {
         margin: 0;
+        max-height: 390px;
         gap: 21px;
         letter-spacing: 0.06em;
         line-height: 110%;
@@ -1696,6 +1699,7 @@ html.stop {
         padding: 5%;
         font-size: 13px;
         line-height: 100%;
+        max-height: 390px;
         gap: 20px;
         margin: 54px 0;
     }
